k8s/hello-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-service
spec:
  selector:
    app: nodejs
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
